--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -22,6 +22,12 @@ on:
         required: false
         default: false
         type: boolean
+      NUGET_SOURCE:
+        required: true
+        type: string
+      NUGET_API_KEY:
+        required: true
+        type: string        
         
 jobs:
   build:
@@ -50,7 +56,7 @@ jobs:
       run: dotnet pack -c Release -o . '${{ inputs.PROJECT_DIRECTORY_NAME }}/${{ inputs.PROJECT_FILENAME }}'
       
     - name: Publish on NuGet
-      run: dotnet nuget push *.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json  
+      run: dotnet nuget push *.nupkg -k  ${{ inputs.NUGET_API_KEY }} -s  ${{ inputs.NUGET_SOURCE }}
       
     - name: Create release
       uses: actions/create-release@v1
