--- a/.github/workflows/pmp-console-docker-image.yml
+++ b/.github/workflows/pmp-console-docker-image.yml
@@ -28,7 +28,7 @@ jobs:
       #     git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
       #     git branch --remote --contains | grep origin/main
       - name: Set VERSION variable from tag
-        run: echo "VERSION=${GITHUB_REF/refs\/tags\/pmp-console-v/}" >> $GITHUB_ENV
+        run: echo "VERSION=${GITHUB_REF/refs\/tags\/plugutopia-console-v/}" >> $GITHUB_ENV
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
