--- a/src/Commons/Common.Plugin.Utils/Common.Plugin.Utils.csproj
+++ b/src/Commons/Common.Plugin.Utils/Common.Plugin.Utils.csproj
@@ -11,7 +11,7 @@
         <Title>Common utils for PlugUtopia</Title>
         <Description>A library that provides common utils that are used by PlugUtopia</Description>
         <PackageId>PlugUtopia.Plugin.Tools</PackageId>
-		<PackageIcon>logo.ico</PackageIcon>
+		<PackageIcon>logo.png</PackageIcon>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageProjectUrl>https://github.com/pietroserrano/pmp-plugin-system</PackageProjectUrl>
         <RepositoryType>git</RepositoryType>
@@ -22,7 +22,7 @@
         <ToolCommandName>plugutopia-tools</ToolCommandName>
     </PropertyGroup>
     <ItemGroup>
-		<None Include="..\..\..\logo.ico">
+		<None Include="..\..\..\logo.png">
 			<Pack>True</Pack>
 			<PackagePath></PackagePath>
 		</None>
