--- a/src/Commons/Common.Plugin/Common.Plugin.csproj
+++ b/src/Commons/Common.Plugin/Common.Plugin.csproj
@@ -10,7 +10,7 @@
 		<Title>Common types and interfaces for PlugUtopia</Title>
 		<Description>A library that provides common types and interfaces that are used by PlugUtopia</Description>
 		<PackageId>PlugUtopia.Plugin</PackageId>
-		<PackageIcon>logo.ico</PackageIcon>
+		<PackageIcon>logo.png</PackageIcon>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/pietroserrano/pmp-plugin-system</PackageProjectUrl>
 		<RepositoryType>git</RepositoryType>
@@ -32,7 +32,7 @@
 		</ProjectReference>
 	</ItemGroup>
 	<ItemGroup>
-		<None Include="..\..\..\logo.ico">
+		<None Include="..\..\..\logo.png">
 			<Pack>True</Pack>
 			<PackagePath></PackagePath>
 		</None>
