--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -27,6 +27,8 @@ on:
         required: true
       NUGET_API_KEY:
         required: true    
+      GITHUB_TOKEN:
+        required: true            
         
 jobs:
   build:
