--- a/.github/workflows/release-common-plugin.yml
+++ b/.github/workflows/release-common-plugin.yml
@@ -50,6 +50,7 @@ jobs:
     secrets:
       NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
       NUGET_SOURCE: https://api.nuget.org/v3/index.json
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
     
   release2:
     needs: filter
@@ -65,3 +66,4 @@ jobs:
     secrets:      
       NUGET_API_KEY: ${{ secrets.GITHUB_TOKEN }}
       NUGET_SOURCE: https://nuget.pkg.github.com/pietroserrano/index.json    
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
